# tefi-oracle-contracts

./: README.md
contracts/oracle-hub/: Cargo.toml
contracts/oracle-hub/src/: query.rs
contracts/oracle-hub/src/testing/: mock_querier.rs
contracts/oracle-proxy-feed/: Cargo.toml
contracts/oracle-proxy-feed/src/: msg.rs
