[package]
name = "oracle-hub"
version = "0.2.0"
authors = ["Terraform Labs, PTE."]
edition = "2021"
description = "Oracle Hub contract for Terra token assets"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cw2 = { version = "0.13.4" }
tefi-oracle = { path = "../../packages/tefi-oracle", version = "0.2.0", features = ["internal"]}
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.13.4" }
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
